<resources>
    <string name="app_name">Kids_in_Space</string>
    <string name="title_activity_arcapture">ARCaptureActivity</string>

    <string name="menu_contAutofocus_error_on">Autofocus On</string>
    <string name="menu_contAutofocus_error_off">Autofocus Off</string>
    <string name="menu_flash_error_on">Flash On</string>
    <string name="menu_flash_error_off">Flash Off</string>
    <string name="menu_camera">Camera hoi</string>
    <string name="menu_camera_front">Camera Front</string>
    <string name="menu_camera_back">Camera Back</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_back">menu_back</string>
    <string name="menu_extended_tracking">menu_extended_tracking</string>
    <string name="menu_contAutofocus">menu_contAutofocus</string>
    <string name="menu_flash">menu_flash</string>
    <string name="INIT_ERROR">INIT_ERROR</string>
    <string name="button_OK">button_OK</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">INIT_ERROR_DEVICE_NOT_SUPPORTED</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">INIT_ERROR_NO_CAMERA_ACCESS</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">INIT_LICENSE_ERROR_MISSING_KEY</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">INIT_LICENSE_ERROR_INVALID_KEY</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">INIT_LICENSE_ERROR_CANCELED_KEY</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">INIT_LICENSE_ERROR_UNKNOWN_ERROR</string>

    <!-- Strings related to login -->
    <string name="loginTeacherActivityTitle">Teacher login</string>
    <string name="loginStudentActivityTitle">Enter code</string>
    <string name="registerTeacherActivityTitle">Teacher register</string>
    <string name="goToTeacherRegisterActivity"><u>Register instead</u></string>
    <string name="controlTeacherActivityTitle">Control room</string>
    <string name="marker_01">Ellion</string>
    <string name="marker_02">Earth</string>
    <string name="marker_03">Moon</string>
    <string name="marker_04">Rocket</string>
    <string name="marker_05">Moon base</string>
    <string name="marker_06">Mars</string>
    <string name="demoActivityTitle">Demo time!</string>
    <string name="blackActivityButton">START</string>
    <string name="hint_teacher_email">Email</string>
    <string name="hint_teacher_password">Password</string>
    <string name="hint_teacher_code">1234ABCD</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_connect_short">Connect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
