<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TeacherLoginActivity">

    <include layout="@layout/planets_background"/>

    <TextView
        android:id="@+id/tv_teacher_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text"
        android:padding="@dimen/button_padding_large"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/loginTeacherActivityTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_teacher_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_teacher_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text"
        android:padding="@dimen/button_padding_large"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center"
        android:textColorHint="@color/white_transparent"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:hint="@string/hint_teacher_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/tv_teacher_login_title"
        app:layout_constraintBottom_toTopOf="@id/et_teacher_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_teacher_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text"
        android:padding="@dimen/button_padding_large"
        android:layout_margin="@dimen/margin_normal"
        android:gravity="center"
        android:textColorHint="@color/white_transparent"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:hint="@string/hint_teacher_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/et_teacher_login_email"
        app:layout_constraintBottom_toTopOf="@id/btn_teacher_connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_teacher_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_connect_short"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/et_teacher_login_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
